# NDKStore

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/ndkstore/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ndkstore/: MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ndkstore/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
